add small changes in homework_3

--- a/homework_3/homework_3_3/homework_3_3.ipynb
+++ b/homework_3/homework_3_3/homework_3_3.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Задание 3\n",
+    "\n",
+    "Создайте виртуальное окружение для проекта, используя модуль venv. В этом окружении установите несколько модулей, таких как requests и BeautifulSoup4, с помощью pip. После установки модулей напишите скрипт, который будет использовать эти модули для выполнения следующих задач:\n",
+    "\n",
+    "Получение данных с веб-сайта с использованием модуля requests.\n",
+    "\n",
+    "Парсинг HTML-кода с веб-сайта с использованием BeautifulSoup4.\n",
+    "\n",
+    "Убедитесь, что ваш скрипт работает корректно в виртуальном окружении и не влияет на глобальные установки Python. В качестве url можно взять https://"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
